--- a/stil.css
+++ b/stil.css
@@ -9,6 +9,7 @@ html, body {
     position: relative;
     width: 100vw;
     height: 100vh;
+   
 }
 
 .fullscreen-bg {
@@ -22,26 +23,7 @@ html, body {
     background-color: black; 
 }
 
-/* .row{
-    width: 60%;
-    height: 20%;
-    position:absolute;
-    left: 20%;
-    top: 10%;
-    border: 3px solid white;
-    gap: 20px;
-    padding-top: 2px;
-    display: flex;
-    flex-direction: row; 
-    justify-content: space-around; 
-    align-items: center;
-}
-.row1{
-    top: 34%;
-}
-.row2{
-    top: 58%;
-} */
+
 canvas{
     position: absolute;
     pointer-events: none;
@@ -52,4 +34,23 @@ img{
     height: 100%;
 }
 
+.info{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
+}
+.info button{
+    background-color: yellow;
+    border: none;
+    border-radius: 2vh;
+    width: 10%;
+    margin: 1%;
+    margin-bottom: 2%;
+    
+}
 
