--- a/stil.css
+++ b/stil.css
@@ -23,8 +23,15 @@ html, body {
     z-index: -1;
     background-color: black; 
 }
-
-
+#canvas3{
+    z-index: 2;
+}
+#canvas2{
+    z-index: 0;
+}
+#canvas1{
+    z-index: 1;
+}
 canvas{
     position: absolute;
     pointer-events: none;
