--- a/stil.css
+++ b/stil.css
@@ -41,7 +41,9 @@ img{
     width: 20%;
     height: 100%;
 }
-
+.cursor{
+    cursor: pointer;
+}
 .info{
     position: absolute;
     bottom: 0;
@@ -125,9 +127,7 @@ ul{
     justify-content: space-between;
     height: 100%;
 }
-#fullscreenBtn{
-    cursor: pointer;
-}
+
 #creditSpan,#cashSpan{
     cursor: pointer;
 }
@@ -143,28 +143,34 @@ span,button{
     border-radius: 1px;
     width: 100%;
     font-size: 20px;
-    height: 50%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
-    padding-left: 4px;
-    padding-right: 4px;
-    margin-left: 10px;
-    margin-top: 5px;
+    align-items: center;
+    padding: 0 0.4vw 0 0.4vw; 
+    /* ispraviti jer preko resize lose utice */
+
     
+}
+.infoForBet{
+    margin-top: 15%;
 }
 
 .betLine-wrapper{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+     justify-content: space-around;
+    align-items: center;
 }
 
-.lines-wrapper{
+.lines-wrapper,.bet-button-wrapper{
+    width: 70%;
     margin-left: 0;
     margin-top: 0;
 }
 .infoForLines{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -174,7 +180,235 @@ span,button{
 #numofLines{
     color: white;
 }
+.textInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 1.8vh;
+    align-items: center;
+}
+/*ZA info deo*/
 
 
+#help-screen {
+    visibility: hidden;
+    position: fixed; 
+    left: 0;
+    top: 0;
+    background: rgba(0, 0, 0, 0.6);
+    
+    padding-right: 20px;
+   
+    z-index: 1000; 
+      inset: 0; 
+}
+
+#help-content {
+    left: 0;
+    top: 0;
+    color: white;
+    background-color: #242424;
+    box-shadow: 0px 0px 30px 13px rgb(0, 0, 0);
+    border: 1px solid #393939;
+    padding: 1%;
+    margin: 5% 15%;
+     max-height: 80vh;          /* ili koliko ti treba */
+    overflow-y: auto;          /* ovde se skroluje */
+    margin: 5% auto;           /* centriraj u overlayu */
+    width: 70%;                /* širina sadržaja */
+    
+}
+
+#help-content img {
+    max-width: 100%;
+}
+
+#help-content h2 {
+    margin: 1em 0;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 2vw;
+}
+
+#help-content p {
+    text-align: center;
+    font-family: 'roboto regular';
+    font-size: 2vw;
+}
+
+#help-content .value-wrapper p {
+    text-align: left;
+}
+
+
+#help-controls-desc, #jackpot-text {
+    font-size: 2vw;
+    font-family: 'roboto regular';
+    text-align: center;
+}
+
+#help-controls-desc ul {
+    padding: 0 1vw;
+}
+
+#help-controls-desc ul li {
+    margin: 0.25em 0;
+}
+
+#help-content div ul li {
+    margin-top: 2%;
+}
+
+#jackpot-text ul {
+    text-align: center !important;
+}
+
+p img {
+    width: 1em;
+    vertical-align: middle;
+}
+
+#table {
+    margin: 1em auto;
+    padding: 2% 0;
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-gap: 1px;
+}
+
+#table.uc {
+    display: flex;
+    align-items: center;
+}
+
+#table p {
+    margin: 0.4em 0 0 0;
+}
+
+#table .col {
+    width: 100%;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#table .col:nth-child(1) {
+    grid-column: 1;
+}
+
+#table .col:nth-child(2) {
+    grid-column: 2;
+}
+
+#table .col:nth-child(3) {
+    grid-column: 3;
+}
+
+#table .col .cell {
+    width: 100%;
+    margin: 0.5em 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    flex: 1;
+}
+
+#table .col .cell img {
+    max-height: 4em;
+}
+
+#table .col .cell p img {
+    width: 11%;
+    vertical-align: middle;
+}
+
+#table .col .cell .value-wrapper {
+    color: yellow;
+    margin: 4% 0 0 0;
+}
+
+#table .col .cell .value-wrapper p span {
+    color: white !important;
+}
+
+#table .col .cell .value-wrapper {
+    background: rgba(255, 255, 255, 0.1);
+    padding: 0.6em;
+    border-radius: 0.4em;
+    margin-top: 0.7em;
+}
+
+#game-lines {
+    margin: 3% 0;
+}
+
+#game-lines img {
+    width: 100%;
+}
+
+
+#close-help-screen {
+
+    position: absolute;
+    top: 11%;
+    right: 11.5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: auto;
+    color: rgba(255, 255, 255, 0.62);
+    border-radius: 90px;
+    text-shadow: 0px 0px 30px rgb(0, 0, 0);
+}
+
+#game-title-help-screen {
+    visibility: hidden;
+    position: absolute;
+    top: 3.8%;
+    left: 0;
+    width: 14.5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #c9c9c9;
+    border-radius: 90px;
+    pointer-events: none;
+    text-shadow: 0 0 30px rgb(0, 0, 0);
+    font-size: 2vw;
+}
+
+.version-label {
+    position: absolute;
+    right: 5%;
+    bottom: 4%;
+    color: white;
+}
+#close-help-screen{
+    cursor: pointer;
+}
+#help-content::-webkit-scrollbar {
+  width: 12px;                       
+}
+
+#help-content::-webkit-scrollbar-track {
+  background: #1c1c1c;                
+  border-radius: 10px;
+  margin: 4px;                        
+}
+
+#help-content::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #9c9c9c, #5a5a5a);
+  border-radius: 10px;
+  border: 2px solid #1c1c1c;          
+  box-shadow: inset 0 0 4px rgba(0,0,0,0.6);
+}
+
+#help-content::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #ffffff, #888);
+}
 
 
