--- a/stil.css
+++ b/stil.css
@@ -143,7 +143,7 @@ span,button{
     color: gray;
 }
 
-.forBet{
+.forBet,.forRound{
     border: 1px solid white;
     border-radius: 1px;
     width: 100%;
@@ -416,4 +416,69 @@ p img {
   background: linear-gradient(180deg, #ffffff, #888);
 }
 
-
+/* Za gamble deo*/
+#autoScreen{
+     visibility: hidden;
+    position: fixed; 
+    left: 0;
+    top: 0;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 20px;
+   
+    z-index: 1000; 
+      inset: 0; 
+}
+#autoContent{
+     left: 0;
+    top: 0;
+    color: white;
+    background-color: #242424;
+    box-shadow: 0px 0px 30px 13px rgb(0, 0, 0);
+    border-radius: 10px;
+    border: 1px solid #393939;
+    padding: 1%;
+    margin: 5% 15%;
+    width: 30%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.autoDiv{
+    display: flex;
+    justify-content: space-between;
+}
+#autoContent input[type="number"] {
+    width: 50%;
+    height: 15%;
+    padding: 8px;
+    box-sizing: border-box;
+}
+#autoContent input[type="checkbox"] {
+    margin-right: 15%;
+    box-sizing: border-box;
+}
+#autoContent button {
+    color: black;
+    width: 50%;
+    height: 20%;
+    align-self: center;
+    margin-top: 5%;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+#close-auto-screen{
+    position: absolute;
+    top: 30%;
+    right: 32%;
+    color: white;
+    font-size: 38.4px;
+    cursor: pointer;
+    z-index: 1001;
+}
+.infoForRounds{
+    width: 30%;
+}
